# BasicDT-fork

./: CHANGES_VS_ORIGINAL.md  README.md  bench_colsample.py  bench_manyclass.py  demo_explain.py  improvements.md  pyproject.toml  setup.py  walkthrough.md
src/basicdt/: __init__.py  _basicdt.py  classifier.py  explain.py
src/basicdt/_ext/: basicdt.cpp  basicdt_types.h
tests/: test_classifier.py  test_explain.py  test_regularization.py
